--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,18 +58,41 @@
                             <a th:href="@{/book/{id}(id=${book.id})}"><img class="card-image card-img-top img-responsive" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
                             <!-- card body -->
                             <div class="card-body">
-                                <a th:href="@{/book/{id}(id=${book.id})}" style="text-decoration: none"><p class="card-title text-responsive text-info font-weight-bold" th:text="${book.title}">title</p></a>
-                                <div class="card-text">
-                                    <small th:each="author : ${book.authors}">
-                                        <span th:text="${author.lastName}">lastName</span>,
-                                        <span th:text="${author.firstName}">firstName</span>
-                                        <br/>
-                                    </small>
+                                <!-- title -->
+                                <div class="card-title text-responsive">
+                                    <a th:unless="${book.title.isBlank()}" th:href="@{/book/{id}(id=${book.id})}" style="text-decoration: none">
+                                        <p class="text-info font-weight-bold" th:text="${book.title.substring(0, T(java.lang.Math).min(book.title.length(), __${@environment.getProperty('front-end.home.title-max-size')}__))}"></p>
+                                    </a>
+                                    <p th:if="${book.title.isBlank()}" class="text-secondary">
+                                        <small class="font-weight-light"><i>title unknown</i></small>
+                                    </p>
+                                </div>
+                                <!-- authors -->
+                                <div class="card-text text-responsive">
+                                    <div th:unless="${book.authors.size() eq 0}" th:each="author,stats : ${book.authors}">
+                                        <div th:if="${stats.index < __${@environment.getProperty('front-end.home.authors-max')}__}">
+                                            <div th:if="${author.lastName.isBlank()}">
+                                                <p class="text-dark my-1" th:text="'-, ' + ${author.firstName}"></p>
+                                            </div>
+                                            <div th:if="${author.firstName.isBlank()}">
+                                                <p class="text-dark my-1" th:text="${author.lastName} + ', -'"></p>
+                                            </div>
+                                            <div th:if="${!author.lastName.isBlank() && !author.firstName.isBlank()}">
+                                                <p class="text-dark my-1" th:text="${author.lastName} + ', ' + ${author.firstName}"></p>
+                                            </div>
+                                        </div>
+                                        <p th:if="${stats.last && stats.size > __${@environment.getProperty('front-end.home.authors-max')}__}" class="text-dark my-1">
+                                            <small class="font-weight-light"><span th:text="${stats.size - __${@environment.getProperty('front-end.home.authors-max')}__}">restOfAuthors</span> more author/s</small>
+                                        </p>
+                                    </div>
+                                    <p th:if="${book.authors.size() eq 0}">
+                                        <small class="text-secondary font-weight-light"><i>author unknown</i></small>
+                                    </p>
                                 </div>
                             </div>
                             <!-- card footer -->
                             <div class="card-footer d-flex align-items-baseline">
-                                <div class="card-text mr-auto">
+                                <div class="card-text mr-auto text-dark text-responsive">
                                     <strong>
                                         <span th:text="${book.price}">price</span>€
                                     </strong>
