--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -56,31 +56,27 @@
                                     <div class="mt-3">
                                         <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${item.book.id})}" style="text-decoration: none">
                                             <p th:unless="${item.book.title.isBlank()}">
-                                                <span th:text="${item.book.title}">title</span>
+                                                <strong th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('front-end.cart.title-max-size')}__))}"></strong>
                                             </p>
                                             <p th:if="${item.book.title.isBlank()}">
-                                                <span><small><i>unknown title</i></small></span>
+                                                <small><i>unknown title</i></small>
                                             </p>
                                         </a>
                                     </div>
                                     <!-- authors -->
-                                    <div>
-                                        <p th:unless="${item.book.authorsString.isBlank()}">
-                                            <strong><span th:text="${item.book.authorsString}"></span></strong>
+                                    <div th:unless="${item.book.authors.size() eq 0}" th:each="author,stats : ${item.book.authors}">
+                                        <p th:if="${stats.index < __${@environment.getProperty('front-end.cart.authors-max')}__}" class="text-dark small my-1">
+                                            <span th:if="${author.lastName.isBlank()}" th:text="'-, ' + ${author.firstName}"></span>
+                                            <span th:if="${author.firstName.isBlank()}" th:text="${author.lastName} + ', -'"></span>
+                                            <span th:if="${!author.lastName.isBlank() && !author.firstName.isBlank()}" th:text="${author.lastName} + ', ' + ${author.firstName}"></span>
                                         </p>
-                                        <p th:if="${item.book.authorsString.isBlank()}">
-                                            <span><small><i>unknown authors</i></small></span>
-                                        </p>
-                                    </div>
-                                    <!-- publisher -->
-                                    <div>
-                                        <p th:if="${item.book.publisher ne null}">
-                                            <small>Published by </small><strong><span th:text="${item.book.publisher.name}"></span></strong>
-                                        </p>
-                                        <p th:unless="${item.book.publisher ne null}">
-                                            <small><i>unknown publisher</i></small>
+                                        <p th:if="${stats.last && stats.size > __${@environment.getProperty('front-end.cart.authors-max')}__}" class="text-dark font-weight-light mb-1 mt-n1 small">
+                                            <small><span th:text="${stats.size - __${@environment.getProperty('front-end.cart.authors-max')}__}">restOfAuthors</span> more author/s</small>
                                         </p>
                                     </div>
+                                    <p th:if="${item.book.authors.size() eq 0}">
+                                        <small class="text-secondary font-weight-light"><i>unknown author</i></small>
+                                    </p>
                                 </div>
                                 <!-- quantity -->
                                 <div class="col-sm-2">
