--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -66,9 +66,7 @@
                                     <!-- authors -->
                                     <div th:unless="${item.book.authors.size() eq 0}" th:each="author,stats : ${item.book.authors}">
                                         <p th:if="${stats.index < __${@environment.getProperty('front-end.cart.authors-max')}__}" class="text-dark small my-1">
-                                            <span th:if="${author.lastName.isBlank()}" th:text="'-, ' + ${author.firstName}"></span>
-                                            <span th:if="${author.firstName.isBlank()}" th:text="${author.lastName} + ', -'"></span>
-                                            <span th:if="${!author.lastName.isBlank() && !author.firstName.isBlank()}" th:text="${author.lastName} + ', ' + ${author.firstName}"></span>
+                                            <span th:replace="fragments/components::author"></span>
                                         </p>
                                         <p th:if="${stats.last && stats.size > __${@environment.getProperty('front-end.cart.authors-max')}__}" class="text-dark font-weight-light mb-1 mt-n1 small">
                                             <small><span th:text="${stats.size - __${@environment.getProperty('front-end.cart.authors-max')}__}">restOfAuthors</span> more author/s</small>
