--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,9 +73,7 @@
                                 <div class="card-text text-responsive">
                                     <div th:unless="${book.authors.size() eq 0}" th:each="author,stats : ${book.authors}">
                                         <p th:if="${stats.index < __${@environment.getProperty('front-end.home.authors-max')}__}" class="text-dark small my-1">
-                                            <span th:if="${author.lastName.isBlank()}" th:text="'-, ' + ${author.firstName}"></span>
-                                            <span th:if="${author.firstName.isBlank()}" th:text="${author.lastName} + ', -'"></span>
-                                            <span th:if="${!author.lastName.isBlank() && !author.firstName.isBlank()}" th:text="${author.lastName} + ', ' + ${author.firstName}"></span>
+                                            <span th:replace="fragments/components::author"></span>
                                         </p>
                                         <p th:if="${stats.last && stats.size > __${@environment.getProperty('front-end.home.authors-max')}__}" class="text-dark font-weight-light mb-0 mt-n1 small">
                                             <small><span th:text="${stats.size - __${@environment.getProperty('front-end.home.authors-max')}__}">restOfAuthors</span> more author/s</small>
