added phone number validation. Closes #109

--- a/src/main/resources/templates/profileForm.html
+++ b/src/main/resources/templates/profileForm.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-sm-2 bg-white"></div>
             </div>
-            <footer th:replace="fragments/components::fixedFooter"></footer>
+            <footer th:replace="fragments/components::footer"></footer>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
