--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -134,7 +134,7 @@
                                     <label for="language">Language:</label>
                                     <select class="custom-select" th:field="*{language}" id="language">
                                         <option th:each="lan : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.Language).values()}"
-                                                th:value="${lan.name()}"
+                                                th:value="${lan.ordinal()}"
                                                 th:text="${lan.name()}">
                                         </option>
                                     </select>
